--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
   "author": "guilherme",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_nodules --respawn src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "build": "tsc",
+    "prod": "node dist/server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "uuid": "^8.3.2"
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^6.0.7",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   }
